# pc1001_zb

./: .gitignore  CMakeLists.txt  FIX_STATUS_UNAVAILABLE.md  LICENSE  LICENSE-hardware  PC1001-to-MQTT.ino  README.md  partitions.csv  pc1001.js  sdkconfig  sdkconfig.defaults  sdkconfig.old  version.h.in
main/: CMakeLists.txt  esp_zb_ota.c  esp_zb_ota.h  esp_zb_pc1001.c  idf_component.yml  pc1001_driver.c  pc1001_driver.h  version.h
